add_executable (2-EvenFibonacciNumbers
				"main.cpp"
				"Fibonacci/fibonacci.cpp" "Fibonacci/fibonacci.hpp" "MathOperation/EvenNumberInList.cpp"
				"MathOperation/EvenNumberInList.hpp" "MathOperation/EvenNumberInList.cpp"
				"MathOperation/SumNumberInList.hpp" "MathOperation/SumNumberInList.cpp"
)